[package]
name = "bdsup"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
dunce = "1.0.5"
futures = "0.3.32"
indexedlinkedhashmap = "3.0.0"
indexmap = "2.13.0"
indicatif = { version = "0.18.4", features = ["futures"] }
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.1.0"
